djangostore/storeapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-api
spec:
  type: NodePort
  ports:
  - name: store-api
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: module

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: store-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: store-api
        app: module
    spec:
      containers:
      - name: test-cluster-1
        image: gcr.io/project-ds-275505/store-app:v1.0.0
        resources:
          requests:
            cpu: 125m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        imagePullPolicy: Always
        ports:
        - name: store-test-api
          containerPort: 8000
          protocol: TCP
